--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "react-s-alert": "^1.4.1",
     "react_ujs": "^2.6.0",
     "turbolinks": "^5.2.0"
   },
