--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-rails": "^0.2.5",
     "react-router-dom": "^5.1.2",
     "react-s-alert": "^1.4.1",
     "react_ujs": "^2.6.0",
